Fixed filtering and sorting logic and changed control view
Fixed the sorting and filtering logic. It wasn't allowing filtering without a populated searchbar.

Made it so it can be filtered without anything typed into the searchbar.

Also, updated the controls to only show the searchbar and filter with dropdown.

Also changed the order of them to search then filter

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enhanced-tables",
+  "name": "dynamic-table-plugin",
   "version": "1.0.5",
   "description": "Add programmable controls to selected tables",
   "main": "main.js",
@@ -9,7 +9,7 @@
     "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
   "keywords": [],
-  "author": "pistacchio",
+  "author": "KasDev573",
   "license": "MIT",
   "devDependencies": {
     "@types/css": "^0.0.37",
