--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Dynamic Table Plugin",
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
-  "description": "A customizable table enhancement plugin for Obsidian with YAML filters and searchable data.",
+  "description": "A customizable dynamic table plugin for Obsidian with YAML filters and searchable data.",
   "author": "KasDev573",
   "authorUrl": "https://github.com/KasDev573",
   "main": "main.js",
