--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "id": "obsidian-dynamic-table-plugin",
-  "name": "Dynamic Table Plugin",
+  "id": "dynamic-table",
+  "name": "Dynamic Table",
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
-  "description": "A customizable dynamic table plugin for Obsidian with YAML filters and searchable data.",
+  "description": "A customizable dynamic table with YAML filters and searchable data.",
   "author": "KasDev573",
   "authorUrl": "https://github.com/KasDev573",
   "main": "main.js",
