--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "css": "^3.0.0",
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
